--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
 <body>
     <div class="container">
         <main>
-            <div class="block" id="1">
-                <h3>1</h3>
+            <div class="block" id="b1">
+                <h3><a href="p1.html">1</a></h3>
             </div>
-            <div class="block" id="2">
+            <div class="block" id="b2">
                 <h3>2</h3>    
             </div>
-            <div class="block" id="3">
+            <div class="block" id="b3">
                 <h3>3</h3>
             </div>
-            <div class="block" id="4">
+            <div class="block" id="b4">
                 <h3>4</h3> 
             </div>
-            <div class="block" id="5">
+            <div class="block" id="b5">
                 <h3>5</h3>
             </div>
-            <div class="block" id="6">
+            <div class="block" id="b6">
                 <h3>6</h3>   
             </div>
-            <div class="block" id="7">
+            <div class="block" id="b7">
                 <h3>7</h3>
             </div>
-            <div class="block" id="8">
+            <div class="block" id="b8">
                 <h3>8</h3>    
             </div>
-            <div class="block" id="9">
+            <div class="block" id="b9">
                 <h3>9</h3>
             </div>
-            <div class="block" id="10">
+            <div class="block" id="b10">
                 <h3>10</h3> 
             </div>
           </main>
