--- a/p1.html
+++ b/p1.html
@@ -14,16 +14,17 @@
     <main>
         <form>
             <header>
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <h1>Qual a formula da carga eletrica?</h1>
             </header>
             <div class="options">
-                <button>Lorem, ipsum dolor.</button>
-                <button>Lorem, ipsum dolor.</button>
-                <button>Lorem, ipsum dolor.</button>
-                <button>Lorem, ipsum dolor.</button>
-                <button>Lorem, ipsum dolor.</button>
+                <button>E=Q.F</button>
+                <button>Q=N.E</button>
+                <button>Q=C.U</button>
+                <button>F=K0.Q1.Q2/D</button>
+                <button>B.H/2</button>
             </div>
         </form>
+        <a href="/index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
