--- a/index.html
+++ b/index.html
@@ -11,36 +11,56 @@
 <body>
     <div class="container">
         <main>
-            <div class="block" id="b1">
-                <h3><a href="p1.html">1</a></h3>
-            </div>
-            <div class="block" id="b2">
-                <h3>2</h3>    
-            </div>
-            <div class="block" id="b3">
-                <h3>3</h3>
-            </div>
-            <div class="block" id="b4">
-                <h3>4</h3> 
-            </div>
-            <div class="block" id="b5">
-                <h3>5</h3>
-            </div>
-            <div class="block" id="b6">
-                <h3>6</h3>   
-            </div>
-            <div class="block" id="b7">
-                <h3>7</h3>
-            </div>
-            <div class="block" id="b8">
-                <h3>8</h3>    
-            </div>
-            <div class="block" id="b9">
-                <h3>9</h3>
-            </div>
-            <div class="block" id="b10">
-                <h3>10</h3> 
-            </div>
+            <a href="p1.html">
+                <div class="block" id="b1">
+                    1
+                </div>
+            </a>
+            <a href="p2.html">
+                <div class="block" id="b2">
+                    2
+                </div>
+            </a>
+            <a href="p3.html">
+                <div class="block" id="b3">
+                    3
+                </div>
+            </a>
+            <a href="p4.html">
+                <div class="block" id="b4">
+                    4
+                </div>
+            </a>
+            <a href="p5.html">
+                <div class="block" id="b5">
+                    5
+                </div>
+            </a>
+            <a href="p6.html">
+                <div class="block" id="b6">
+                    6
+                </div>
+            </a>
+            <a href="p7.html">
+                <div class="block" id="b7">
+                    7
+                </div>
+            </a>
+            <a href="p8.html">
+                <div class="block" id="b8">
+                    8
+                </div>
+            </a>
+            <a href="p9.html">
+                <div class="block" id="b9">
+                    9
+                </div>
+            </a>
+            <a href="p10.html">
+                <div class="block" id="b10">
+                    10
+                </div>
+            </a>
           </main>
     </div>
 </body>
