--- a/p4.html
+++ b/p4.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
+    <script src="vars.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
@@ -14,10 +16,10 @@
                 <h1> é uma força de interação entre as cargas elétricas:</h1>
             </header>
             <div class="options">
-                <button>eletrizaçao</button>
-                <button>potencial eletrico</button>
-                <button>energia eletrica</button>   
-                <button>campo eletrico</button>
+                <button class="resErr" onclick="errada()">eletrizaçao</button>
+                <button class="resErr" onclick="errada()">potencial eletrico</button>
+                <button class="resCer" onclick="certa()">energia eletrica</button>   
+                <button class="resErr" onclick="errada()">campo eletrico</button>
             </div>
         </form>
         <a href="/index.html" class="back">voltar</a>
