--- a/p8.html
+++ b/p8.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
+    <script src="vars.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
@@ -14,10 +16,10 @@
                 <h1>Materiais que permitem com facilidade o transito de particulas portadores de carga eletricas:</h1>
             </header>
             <div class="options">
-                <button>isolantes</button>
-                <button>borracha</button>
-                <button>metais</button>   
-                <button>madeiras</button>
+                <button class="resErr" onclick="errada()">isolantes</button>
+                <button class="resErr" onclick="errada()">borracha</button>
+                <button class="resCer" onclick="certa()">metais</button>   
+                <button class="resErr" onclick="errada()">madeiras</button>
          
             </div>
         </form>
