--- a/p9.html
+++ b/p9.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
@@ -14,10 +15,10 @@
                 <h1>A menor carga elétrica existente na natureza é chamada de:</h1>
             </header>
             <div class="options">
-                <button>Carga eletrica</button>
-                <button>Prótons</button>
-                <button>elétrons livres</button>   
-                <button>Carga elementar</button>
+                <button class="resErr erro" onclick="errada()">Carga eletrica</button>
+                <button class="resErr" onclick="errada()">Prótons</button>
+                <button class="resErr" onclick="errada()">elétrons livres</button>   
+                <button class="resCer" onclick="certa()">Carga elementar</button>
          
             </div>
         </form>
