--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
+  <script src="vars.js" defer></script>
 </head>
 <body>
     <div class="container">
