--- a/p10.html
+++ b/p10.html
@@ -10,5 +10,6 @@
 <body>
     <h1>PASSOU A VEZ! 🤣🤣🤣</h1>
     <div class="bruxa"></div>
+    <a href="/index.html" class="back">voltar</a>
 </body>
 </html>
