--- a/p3.html
+++ b/p3.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
+    <script src="vars.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
@@ -14,10 +16,10 @@
                 <h1>qual a unidade de medida da carga?</h1>
             </header>
             <div class="options">
-                <button>coloumb</button>
-                <button>newton</button>
-                <button>joule</button>   
-                <button>celsius</button>
+                <button class="resCer" onclick="certa()">coloumb</button>
+                <button class="resErr" onclick="errada()">newton</button>
+                <button class="resErr" onclick="errada()">joule</button>   
+                <button class="resErr" onclick="errada()">celsius</button>
             </div>
         </form>
         <a href="/index.html" class="back">voltar</a>
