evento de click add

--- a/html/p1.html
+++ b/html/p1.html
@@ -8,9 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p1.css">
-    <script src="vars.js" defer></script>
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="../css/p1.css">
+    <script src="../scripts/main-1.js" defer></script>
 </head>
 <body>
     <main>
@@ -19,14 +18,14 @@
                 <h1>Qual a formula da carga eletrica?</h1>
             </header>
             <div class="options">
-                <button class="resErr" onclick="errada()">E=Q.F</button>
-                <button class="resCer" onclick="certa()">Q=N.E</button>
-                <button class="resErr" onclick="errada()">Q=C.U</button>
-                <button class="resErr" onclick="errada()">F=K0.Q1.Q2/D</button>
-                <button class="resErr" onclick="errada()">B.H/2</button>
+                <button class="resErr1" id="botao1">A) E=Q.F</button>
+                <button class="resCer" id="botao2">B) Q=N.E</button>
+                <button class="resErr2" id="botao3">C) Q=C.U</button>
+                <button class="resErr3" id="botao4">D) F=K0.Q1.Q2/D</button>
+                <button class="resErr4" id="botao5">E) B.H/2</button>
             </div>
         </form>
-        <a href="/index.html" class="back">voltar</a>
+        <a href="index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
