--- a/html/p7.html
+++ b/html/p7.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p1.css">
-    <script src="vars.js" defer></script>
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="../css/p1.css">
+    <script src="../scripts/main-7.js" defer></script>
 </head>
 <body>
     <main>
@@ -16,13 +15,13 @@
                 <h1>Qual dos elementos abaixo é particula elementar do átomo?</h1>
             </header>
             <div class="options">
-                <button class="resErr" onclick="errada()">neutrinos</button>
-                <button class="resErr" onclick="errada()">Ânions</button>
-                <button class="resCer" onclick="certa()">Prótons</button>   
-                <button class="resErr" onclick="errada()">hádrons</button>
+                <button class="resErr">neutrinos</button>
+                <button class="resErr">Ânions</button>
+                <button class="resCer">Prótons</button>   
+                <button class="resErr">hádrons</button>
             </div>
         </form>
-        <a href="/index.html" class="back">voltar</a>
+        <a href="index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
