--- a/html/p8.html
+++ b/html/p8.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p1.css">
-    <script src="vars.js" defer></script>
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="../css/p1.css">
+    <script src="../scripts/main-8.js" defer></script>
 </head>
 <body>
     <main>
@@ -16,14 +15,14 @@
                 <h1>Materiais que permitem com facilidade o transito de particulas portadores de carga eletricas:</h1>
             </header>
             <div class="options">
-                <button class="resErr" onclick="errada()">isolantes</button>
-                <button class="resErr" onclick="errada()">borracha</button>
-                <button class="resCer" onclick="certa()">metais</button>   
-                <button class="resErr" onclick="errada()">madeiras</button>
+                <button class="resErr">isolantes</button>
+                <button class="resErr">borracha</button>
+                <button class="resCer">metais</button>   
+                <button class="resErr">madeiras</button>
          
             </div>
         </form>
-        <a href="/index.html" class="back">voltar</a>
+        <a href="index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
