--- a/html/p9.html
+++ b/html/p9.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p1.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="../css/p1.css">
+    <script src="../scripts/main-9.js" defer></script>
 </head>
 <body>
     <main>
@@ -15,14 +15,14 @@
                 <h1>A menor carga elétrica existente na natureza é chamada de:</h1>
             </header>
             <div class="options">
-                <button class="resErr erro" onclick="errada()">Carga eletrica</button>
-                <button class="resErr" onclick="errada()">Prótons</button>
-                <button class="resErr" onclick="errada()">elétrons livres</button>   
-                <button class="resCer" onclick="certa()">Carga elementar</button>
+                <button class="resErr">Carga eletrica</button>
+                <button class="resErr">Prótons</button>
+                <button class="resErr">elétrons livres</button>   
+                <button class="resCer">Carga elementar</button>
          
             </div>
         </form>
-        <a href="/index.html" class="back">voltar</a>
+        <a href="index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
