--- a/html/p10.html
+++ b/html/p10.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p10.css">
+    <link rel="stylesheet" href="../css/p10.css">
 </head>
 <body>
     <h1>PASSOU A VEZ! 🤣🤣🤣</h1>
     <div class="bruxa"></div>
-    <a href="/index.html" class="back">voltar</a>
+    <a href="index.html" class="back">voltar</a>
 </body>
 </html>
