--- a/html/p5.html
+++ b/html/p5.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="p1.css">
+    <link rel="stylesheet" href="../css/p1.css">
     <title>Document</title>
-    <script src="vars.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="../scripts/main-5.js" defer></script>
 </head>
 <body>
     <main>
@@ -20,13 +19,13 @@
                     matéria:</h1>
             </header>
             <div class="options">
-                <button class="resErr" onclick="errada()">possui maior numero de neutrons que de protons</button>
-                <button class="resCer" onclick="certa()">possui quantidades iguais de protons e eletrons</button>
-                <button class="resErr" onclick="errada()">é constituída somente de prótons</button>
-                <button class="resErr" onclick="errada()">é constituída somente de nêutrons</button>
+                <button class="resErr">possui maior numero de neutrons que de protons</button>
+                <button class="resCer">possui quantidades iguais de protons e eletrons</button>
+                <button class="resErr">é constituída somente de prótons</button>
+                <button class="resErr">é constituída somente de nêutrons</button>
             </div>
         </form>
-        <a href="/index.html" class="back">voltar</a>
+        <a href="index.html" class="back">voltar</a>
     </main>
 </body>
 </html>
