efeito de certo ou errado finalizado!

--- a/html/index.html
+++ b/html/index.html
@@ -62,5 +62,12 @@
             </a>
           </main>
     </div>
+    <script>
+        const btn_questions = document.querySelector("#b1")
+
+        btn_questions.addEventListener("click", () => {
+            btn_questions.style.display = "none"
+        })
+    </script>
 </body>
 </html>
