--- a/html/p2.html
+++ b/html/p2.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Qual os tipos de eletrizaçao?</h1>
             </header>
             <div class="options">
                 <button class="resCer">induçao, contato, atrito</button>
-                <button class="resErr">conducao, inducao, irradiaçao</button>
-                <button class="resErr">conducao, atrito, irradiaçao</button>   
-                <button class="resErr">contato, atrito, irradiaçao</button>
+                <button class="resErr1">conducao, inducao, irradiaçao</button>
+                <button class="resErr2">conducao, atrito, irradiaçao</button>   
+                <button class="resErr3">contato, atrito, irradiaçao</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
