--- a/html/p3.html
+++ b/html/p3.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>qual a unidade de medida da carga?</h1>
             </header>
             <div class="options">
                 <button class="resCer">coloumb</button>
-                <button class="resErr">newton</button>
-                <button class="resErr">joule</button>   
-                <button class="resErr">celsius</button>
+                <button class="resErr1">newton</button>
+                <button class="resErr2">joule</button>   
+                <button class="resErr3">celsius</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
