--- a/html/p4.html
+++ b/html/p4.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1> é uma força de interação entre as cargas elétricas:</h1>
             </header>
             <div class="options">
-                <button class="resErr">eletrizaçao</button>
-                <button class="resErr">potencial eletrico</button>
+                <button class="resErr1">eletrizaçao</button>
+                <button class="resErr2">potencial eletrico</button>
                 <button class="resCer">energia eletrica</button>   
-                <button class="resErr">campo eletrico</button>
+                <button class="resErr3">campo eletrico</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
