--- a/html/p5.html
+++ b/html/p5.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>A matéria, em seu estado
                     normal, não manifesta propriedades elétricas.
@@ -19,12 +19,12 @@
                     matéria:</h1>
             </header>
             <div class="options">
-                <button class="resErr">possui maior numero de neutrons que de protons</button>
+                <button class="resErr1">possui maior numero de neutrons que de protons</button>
                 <button class="resCer">possui quantidades iguais de protons e eletrons</button>
-                <button class="resErr">é constituída somente de prótons</button>
-                <button class="resErr">é constituída somente de nêutrons</button>
+                <button class="resErr2">é constituída somente de prótons</button>
+                <button class="resErr3">é constituída somente de nêutrons</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
