--- a/html/p6.html
+++ b/html/p6.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Uma aluna de cabelos compridos, num dia
                     bastante seco, percebe que depois de penteá-los o pente
                     utilizado atrai pedaços de papel. Isto ocorre porque:</h1>
             </header>
             <div class="options">
-                <button class="resErr">os pedaços de papel estavam eletrizados.</button>
-                <button class="resErr">o papel é um bom condutor eletrico.</button>
+                <button class="resErr1">os pedaços de papel estavam eletrizados.</button>
+                <button class="resErr2">o papel é um bom condutor eletrico.</button>
                 <button class="resCer">o pente se eletrizou por atrito.</button>   
-                <button class="resErr"> há atraçao gravitacional entre os pente e os pedaços de papel. </button>
-                <button class="resErr">o pente é um bom condutor elétrico.</button>
+                <button class="resErr3"> há atraçao gravitacional entre os pente e os pedaços de papel. </button>
+                <button class="resErr4">o pente é um bom condutor elétrico.</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
