--- a/html/p7.html
+++ b/html/p7.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Qual dos elementos abaixo é particula elementar do átomo?</h1>
             </header>
             <div class="options">
-                <button class="resErr">neutrinos</button>
-                <button class="resErr">Ânions</button>
+                <button class="resErr1">neutrinos</button>
+                <button class="resErr2">Ânions</button>
                 <button class="resCer">Prótons</button>   
-                <button class="resErr">hádrons</button>
+                <button class="resErr3">hádrons</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
