--- a/html/p9.html
+++ b/html/p9.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>A menor carga elétrica existente na natureza é chamada de:</h1>
             </header>
             <div class="options">
-                <button class="resErr">Carga eletrica</button>
-                <button class="resErr">Prótons</button>
-                <button class="resErr">elétrons livres</button>   
+                <button class="resErr1">Carga eletrica</button>
+                <button class="resErr2">Prótons</button>
+                <button class="resErr3">elétrons livres</button>   
                 <button class="resCer">Carga elementar</button>
          
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
