--- a/html/p1.html
+++ b/html/p1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Qual a formula da carga eletrica?</h1>
             </header>
@@ -24,7 +24,7 @@
                 <button class="resErr3" id="botao4">D) F=K0.Q1.Q2/D</button>
                 <button class="resErr4" id="botao5">E) B.H/2</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
