--- a/html/p8.html
+++ b/html/p8.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Materiais que permitem com facilidade o transito de particulas portadores de carga eletricas:</h1>
             </header>
             <div class="options">
-                <button class="resErr">isolantes</button>
-                <button class="resErr">borracha</button>
+                <button class="resErr1">isolantes</button>
+                <button class="resErr2">borracha</button>
                 <button class="resCer">metais</button>   
-                <button class="resErr">madeiras</button>
+                <button class="resErr3">madeiras</button>
          
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
