--- a/p1.html
+++ b/p1.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-1.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-1.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Qual a formula da carga eletrica?</h1>
             </header>
@@ -24,7 +24,8 @@
                 <button class="resErr3" id="botao4">D) F=K0.Q1.Q2/D</button>
                 <button class="resErr4" id="botao5">E) B.H/2</button>
             </div>
-        </form>
+            
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
