--- a/p3.html
+++ b/p3.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-3.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-3.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>qual a unidade de medida da carga?</h1>
             </header>
             <div class="options">
                 <button class="resCer">coloumb</button>
-                <button class="resErr">newton</button>
-                <button class="resErr">joule</button>   
-                <button class="resErr">celsius</button>
+                <button class="resErr1">newton</button>
+                <button class="resErr2">joule</button>   
+                <button class="resErr3">celsius</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
