--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -61,6 +61,14 @@
                 </div>
             </a>
           </main>
+          
     </div>
+    <script>
+        const btn_questions = document.querySelector("#b1")
+
+        btn_questions.addEventListener("click", () => {
+            btn_questions.style.display = "none"
+        })
+    </script>
 </body>
 </html>
