--- a/p4.html
+++ b/p4.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-4.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-4.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1> é uma força de interação entre as cargas elétricas:</h1>
             </header>
             <div class="options">
-                <button class="resErr">eletrizaçao</button>
-                <button class="resErr">potencial eletrico</button>
+                <button class="resErr1">eletrizaçao</button>
+                <button class="resErr2">potencial eletrico</button>
                 <button class="resCer">energia eletrica</button>   
-                <button class="resErr">campo eletrico</button>
+                <button class="resErr3">campo eletrico</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
