--- a/p6.html
+++ b/p6.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-6.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-6.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Uma aluna de cabelos compridos, num dia
                     bastante seco, percebe que depois de penteá-los o pente
                     utilizado atrai pedaços de papel. Isto ocorre porque:</h1>
             </header>
             <div class="options">
-                <button class="resErr">os pedaços de papel estavam eletrizados.</button>
-                <button class="resErr">o papel é um bom condutor eletrico.</button>
+                <button class="resErr1">os pedaços de papel estavam eletrizados.</button>
+                <button class="resErr2">o papel é um bom condutor eletrico.</button>
                 <button class="resCer">o pente se eletrizou por atrito.</button>   
-                <button class="resErr"> há atraçao gravitacional entre os pente e os pedaços de papel. </button>
-                <button class="resErr">o pente é um bom condutor elétrico.</button>
+                <button class="resErr3"> há atraçao gravitacional entre os pente e os pedaços de papel. </button>
+                <button class="resErr4">o pente é um bom condutor elétrico.</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
