--- a/p7.html
+++ b/p7.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-7.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-7.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Qual dos elementos abaixo é particula elementar do átomo?</h1>
             </header>
             <div class="options">
-                <button class="resErr">neutrinos</button>
-                <button class="resErr">Ânions</button>
+                <button class="resErr2">neutrinos</button>
+                <button class="resErr1">Ânions</button>
                 <button class="resCer">Prótons</button>   
-                <button class="resErr">hádrons</button>
+                <button class="resErr3">hádrons</button>
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
