--- a/p8.html
+++ b/p8.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-8.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-8.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>Materiais que permitem com facilidade o transito de particulas portadores de carga eletricas:</h1>
             </header>
             <div class="options">
-                <button class="resErr">isolantes</button>
-                <button class="resErr">borracha</button>
+                <button class="resErr1">isolantes</button>
+                <button class="resErr2">borracha</button>
                 <button class="resCer">metais</button>   
-                <button class="resErr">madeiras</button>
+                <button class="resErr3">madeiras</button>
          
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
