--- a/p9.html
+++ b/p9.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/p1.css">
-    <script src="../scripts/main-9.js" defer></script>
+    <link rel="stylesheet" href="p1.css">
+    <script src="main-9.js" defer></script>
 </head>
 <body>
     <main>
-        <form>
+        <section>
             <header>
                 <h1>A menor carga elétrica existente na natureza é chamada de:</h1>
             </header>
             <div class="options">
-                <button class="resErr">Carga eletrica</button>
-                <button class="resErr">Prótons</button>
-                <button class="resErr">elétrons livres</button>   
+                <button class="resErr1">Carga eletrica</button>
+                <button class="resErr2">Prótons</button>
+                <button class="resErr3">elétrons livres</button>   
                 <button class="resCer">Carga elementar</button>
          
             </div>
-        </form>
+        </section>
         <a href="index.html" class="back">voltar</a>
     </main>
 </body>
