--- a/p3.html
+++ b/p3.html
@@ -12,13 +12,13 @@
     <main>
         <section>
             <header>
-                <h1>qual a unidade de medida da carga?</h1>
+                <h1>Qual a formula do juro composto?</h1>
             </header>
             <div class="options">
-                <button class="resCer">A) coloumb</button>
-                <button class="resErr1">B) newton</button>
-                <button class="resErr2">C) joule</button>   
-                <button class="resErr3">D) celsius</button>
+                <button class="resCer">A) M = C ( 1+i)t</button>
+                <button class="resErr1">B) J = C ∙ i ∙ t</button>
+                <button class="resErr2">C) x = (-b ± √(b² – 4ac)) / (2a)</button>   
+                <button class="resErr3">D)  M = C + J </button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
