--- a/p5.html
+++ b/p5.html
@@ -12,17 +12,13 @@
     <main>
         <section>
             <header>
-                <h1>A matéria, em seu estado
-                    normal, não manifesta propriedades elétricas.
-                    No atual estágio de conhecimentos da estrutura
-                    atômica, isso nos permite concluir que a
-                    matéria:</h1>
+                <h1> Qual o conceito de permutação?</h1>
             </header>
             <div class="options">
-                <button class="resErr1">A) possui maior numero de neutrons que de protons</button>
-                <button class="resCer">B) possui quantidades iguais de protons e eletrons</button>
-                <button class="resErr2">C) é constituída somente de prótons</button>
-                <button class="resErr3">D) é constituída somente de nêutrons</button>
+                <button class="resErr1">A)  é um tipo de agrupamento estudado na análise combinatória</button>
+                <button class="resCer">B) é uma técnica de contagem utilizada para determinar quantas maneiras existem para ordenar os elementos de um conjunto finito</button>
+                <button class="resErr2">C) é preciso que o número de ordem k seja igual ao número n de elementos de A.</button>
+                <button class="resErr3">D)acontece quando em um conjunto de n elementos, alguns destes são iguais</button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
