--- a/p4.html
+++ b/p4.html
@@ -12,13 +12,13 @@
     <main>
         <section>
             <header>
-                <h1> é uma força de interação entre as cargas elétricas:</h1>
+                <h1>o que determina uma função de 1 grau:</h1>
             </header>
             <div class="options">
-                <button class="resErr1">A) eletrizaçao</button>
-                <button class="resErr2">B) potencial eletrico</button>
-                <button class="resCer">C) energia eletrica</button>   
-                <button class="resErr3">D) campo eletrico</button>
+                <button class="resErr1">A) duas icognitas cuja uma estará elevada ao quadrada</button>
+                <button class="resErr2">B) possui duas icognitas e ambas estão elevadas</button>
+                <button class="resCer">C) é aquela escrita na forma y = ax + b, em que a e b são reais e a é diferente de zero</button>   
+                <button class="resErr3">D) todos os agrupamentos ordenados e sem repetição que podemos formar com parte dos elementos de um conjunto</button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
