--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
         <main>
@@ -42,9 +40,28 @@
                     6
                 </div>
             </a>
-
-        </main>
-
+            <a href="p7.html">
+                <div class="block" id="b7">
+                    7
+                </div>
+            </a>
+            <a href="p8.html">
+                <div class="block" id="b8">
+                    8
+                </div>
+            </a>
+            <a href="p9.html">
+                <div class="block" id="b9">
+                    9
+                </div>
+            </a>
+            <a href="p10.html">
+                <div class="block" id="b10">
+                    10
+                </div>
+            </a>
+          </main>
+          
     </div>
     <script>
         const btn_questions = document.querySelector("#b1")
@@ -54,5 +71,4 @@
         })
     </script>
 </body>
-
 </html>
