--- a/p1.html
+++ b/p1.html
@@ -15,14 +15,14 @@
     <main>
         <section>
             <header>
-                <h1>O que é o arranjo simples? </h1>
+                <h1>Qual a formula da carga eletrica?</h1>
             </header>
             <div class="options">
-                <button class="resErr1" id="botao1">A)  classificada como função de primeiro grau, sendo os coeficientes a e b números reais e diferentes de zero.</button>
-                <button class="resCer" id="botao2">B) todos os agrupamentos ordenados e sem repetição que podemos formar com parte dos elementos de um conjunto.</button>
-                <button class="resErr2" id="botao3">C) é a área da Matemática que tem como função estudar a quantidade de agrupamentos que podem ser formados a partir de um conjunto de valores</button>
-                <button class="resErr3" id="botao4">D)  é uma expressão construída a partir de um conjunto de termos, multiplicando cada termo por uma constante </button>
-                <button class="resErr4" id="botao5">E)associa cada valor que a variável aleatória pode assumir à sua probabilidade de assumir esse valor.</button>
+                <button class="resErr1" id="botao1">A) E=Q.F</button>
+                <button class="resCer" id="botao2">B) Q=N.E</button>
+                <button class="resErr2" id="botao3">C) Q=C.U</button>
+                <button class="resErr3" id="botao4">D) F=K0.Q1.Q2/D</button>
+                <button class="resErr4" id="botao5">E) B.H/2</button>
             </div>
             
         </section>
