--- a/p2.html
+++ b/p2.html
@@ -12,13 +12,13 @@
     <main>
         <section>
             <header>
-                <h1>Qual a formula do juro simples?</h1>
+                <h1>Qual os tipos de eletrizaçao?</h1>
             </header>
             <div class="options">
-                <button class="resCer">A) J = C ∙ i ∙ t </button>
-                <button class="resErr1">B) M = C ( 1+i)t </button>
-                <button class="resErr2">C) x = (-b ± √(b² – 4ac)) / (2a)</button>   
-                <button class="resErr3">D)  M = C + J</button>
+                <button class="resCer">A) induçao, contato, atrito</button>
+                <button class="resErr1">B) conducao, inducao, irradiaçao</button>
+                <button class="resErr2">C) conducao, atrito, irradiaçao</button>   
+                <button class="resErr3">D) contato, atrito, irradiaçao</button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
