--- a/p6.html
+++ b/p6.html
@@ -12,14 +12,16 @@
     <main>
         <section>
             <header>
-                <h1>Qual o conceito de fatorial?</h1>
+                <h1>Uma aluna de cabelos compridos, num dia
+                    bastante seco, percebe que depois de penteá-los o pente
+                    utilizado atrai pedaços de papel. Isto ocorre porque:</h1>
             </header>
             <div class="options">
-                <button class="resErr1">A)é caracterizado pelo posicionamento de equipamentos de acordo com a sequência de produção </button>
-                <button class="resErr2">B) é uma certa quantidade de unidades que deve constituir uma unidade de ordem imediatamente superior </button>
-                <button class="resCer">C)O fatorial de um número é o produto dele pelos seus antecessores maiores que 0</button>   
-                <button class="resErr3">D)  é o lugar geométrico dos pontos cuja diferença das distâncias a outros dois pontos (chamados focos) é constante</button>
-                <button class="resErr4">E) todos os agrupamentos ordenados e sem repetição que podemos formar com parte dos elementos de um conjunto</button>
+                <button class="resErr1">A) os pedaços de papel estavam eletrizados.</button>
+                <button class="resErr2">B) o papel é um bom condutor eletrico.</button>
+                <button class="resCer">C) o pente se eletrizou por atrito.</button>   
+                <button class="resErr3">D) há atraçao gravitacional entre os pente e os pedaços de papel. </button>
+                <button class="resErr4">E) o pente é um bom condutor elétrico.</button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
