--- a/p7.html
+++ b/p7.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
-    <script src="main-3.js" defer></script>
+    <script src="main-7.js" defer></script>
 </head>
 <body>
     <main>
         <section>
             <header>
-                <h1>qual a unidade de medida da carga?</h1>
+                <h1>Qual dos elementos abaixo é particula elementar do átomo?</h1>
             </header>
             <div class="options">
-                <button class="resCer">A) coloumb</button>
-                <button class="resErr1">B) newton</button>
-                <button class="resErr2">C) joule</button>   
-                <button class="resErr3">D) celsius</button>
+                <button class="resErr1">A) neutrinos</button>
+                <button class="resErr2">B) Ânions</button>
+                <button class="resCer">C) Prótons</button>   
+                <button class="resErr3">D) hádrons</button>
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
