--- a/p8.html
+++ b/p8.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="p1.css">
-    <script src="main-3.js" defer></script>
+    <script src="main-8.js" defer></script>
 </head>
 <body>
     <main>
         <section>
             <header>
-                <h1>qual a unidade de medida da carga?</h1>
+                <h1>Materiais que permitem com facilidade o transito de particulas portadores de carga eletricas:</h1>
             </header>
             <div class="options">
-                <button class="resCer">A) coloumb</button>
-                <button class="resErr1">B) newton</button>
-                <button class="resErr2">C) joule</button>   
-                <button class="resErr3">D) celsius</button>
+                <button class="resErr1">A) isolantes</button>
+                <button class="resErr2">B) borracha</button>
+                <button class="resCer">C) metais</button>   
+                <button class="resErr3">D) madeiras</button>
+         
             </div>
         </section>
         <a href="index.html" class="back">voltar</a>
